; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/mbstring/extr_mbslwr.c__mbslwr.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/mbstring/extr_mbslwr.c__mbslwr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @_mbslwr(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  store i8* %5, i8** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = icmp eq i8* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %37

9:                                                ; preds = %1
  br label %10

10:                                               ; preds = %34, %9
  %11 = load i8*, i8** %4, align 8
  %12 = load i8, i8* %11, align 1
  %13 = icmp ne i8 %12, 0
  br i1 %13, label %14, label %35

14:                                               ; preds = %10
  %15 = load i8*, i8** %4, align 8
  %16 = load i8, i8* %15, align 1
  %17 = call i32 @_ismbblead(i8 zeroext %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %26, label %19

19:                                               ; preds = %14
  %20 = load i8*, i8** %4, align 8
  %21 = load i8, i8* %20, align 1
  %22 = call zeroext i8 @tolower(i8 zeroext %21)
  %23 = load i8*, i8** %4, align 8
  store i8 %22, i8* %23, align 1
  %24 = load i8*, i8** %4, align 8
  %25 = getelementptr inbounds i8, i8* %24, i32 1
  store i8* %25, i8** %4, align 8
  br label %34

26:                                               ; preds = %14
  %27 = load i8*, i8** %4, align 8
  %28 = bitcast i8* %27 to i16*
  %29 = load i16, i16* %28, align 2
  %30 = call zeroext i8 @_mbctolower(i16 zeroext %29)
  %31 = load i8*, i8** %4, align 8
  store i8 %30, i8* %31, align 1
  %32 = load i8*, i8** %4, align 8
  %33 = getelementptr inbounds i8, i8* %32, i32 1
  store i8* %33, i8** %4, align 8
  br label %34

34:                                               ; preds = %26, %19
  br label %10

35:                                               ; preds = %10
  %36 = load i8*, i8** %3, align 8
  store i8* %36, i8** %2, align 8
  br label %37

37:                                               ; preds = %35, %8
  %38 = load i8*, i8** %2, align 8
  ret i8* %38
}

declare dso_local i32 @_ismbblead(i8 zeroext) #1

declare dso_local zeroext i8 @tolower(i8 zeroext) #1

declare dso_local zeroext i8 @_mbctolower(i16 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
